long word breaks mobile page

--- a/_includes/start.html
+++ b/_includes/start.html
@@ -154,7 +154,7 @@
 }
 };</pre></div>
 
-                    <p>For a controller file named <code>test_controller.js</code> with content given above, there will be an api for address <code>http://hostname/test_controller/example_action</code>.</p>
+                    <p>For a controller file named <code>test_controller.js</code> with content given above, there will be an api for address <code>http://hostname/test_controller /example_action</code>.</p>
                 </div>
             </div>
             
