--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,6 +28,9 @@
                         <a class="page-scroll" href="#start">Quick Start</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#components">Components</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
