--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     {% include intro.html %}
     {% include features.html %}
     {% include start.html %}
+    {% include components.html %}
     {% include about.html %}
     {% include footer.html %}
     {% include js.html %}
